Fixed min-height on ring images bleeding beyond full view mode

--- a/sites/all/themes/trf/documentation/styleguide/modules/_related-similar.scss
+++ b/sites/all/themes/trf/documentation/styleguide/modules/_related-similar.scss
@@ -47,6 +47,7 @@
     .commerce-product-field-field-images {
       padding-right: 0;
       padding-bottom: 0;
+      min-height: auto;
 
       a {
         display: block;
