--- a/sites/all/themes/trf/documentation/styleguide/modules/rings/_images.scss
+++ b/sites/all/themes/trf/documentation/styleguide/modules/rings/_images.scss
@@ -2,7 +2,7 @@
 // Images and Image Zoom
 //
 
-.page-node.node-type-rings .view-mode-full {
+.page-node.node-type-rings {
 
   // Wrapper around image zoom and thumbnails
   .commerce-product-field-field-images {
